fixed responsive issues on direct portfolio template
changing type faces messed up a few things, now fixed!

--- a/src/sass/_case_summary.scss
+++ b/src/sass/_case_summary.scss
@@ -1,26 +1,6 @@
 
 // this seems likely to be a broader component, maybe...
-.case-summary-header {
-  position: fixed;
-  height: $fixed-menu-bar-height;
-  width: 100%;
-  background-color: #fff;
-  z-index: 10;
-  nav {
-    display: flex;
-    flex-flow: row nowrap;
-    padding: 0 1rem;
-    align-items: center;
 
-    .site-title {
-      flex: 2 0 auto;
-    }
-
-    .main-nav-list {
-      flex: 1 0 auto;
-    }
-  }
-}
 
 .case-summary-main {
   padding-top: $fixed-menu-bar-height; 
