--- a/src/sass/_direct_portfolio.scss
+++ b/src/sass/_direct_portfolio.scss
@@ -4,6 +4,7 @@
   min-height: 100vh;
   display: flex;
   flex-flow: column nowrap;
+
   @media screen and (min-width: 731px) {
     display: grid;
     grid-template-columns: 2.75fr 3fr;
@@ -22,21 +23,31 @@
       $col-grad-color 77vw
     );
   }
-  nav {
-    flex: 0 0 75px;
-    display: flex;
-    flex-flow: row nowrap;
-    padding: 1rem;
+  .fixed-top-nav {
+    @media screen and (min-width: 1024px) {
+      display: none;
+    }
+  }
+  .floating-nav {
+    // flex: 0 0 75px;
+    // display: flex;
+    // flex-flow: row nowrap;
+    // padding: 1rem;
+    display: none;
 
-    @media screen and (min-width: 731px) {
+    @media screen and (min-width: 1024px) {
+      display: flex;
       grid-column: 1 / 3;
       grid-row: 1 / 2;
+      padding: 1rem;
+      align-items: center;
+
     }
 
     .site-title {
       flex: 0 0 auto;
     }
-    .landing-nav-list {
+    .floating-nav-list {
       flex: 1; 
       display: flex;
       flex-flow: row wrap;
@@ -51,17 +62,10 @@
       }
 
       a {
-        
-        color: #000;
-        font-size: 0.9rem;
+        color: $dark;
         box-shadow: inset 0 0 0 #ccc;
-        
-
         &:hover{
           box-shadow: $link-hover-shadow;
-        }
-        &:visited {
-          color: lighten($dark, 20%);
         }
       }
     }
@@ -69,7 +73,7 @@
   .sidebar {
     flex: 2;
     padding: 1rem 2.5rem;
-    
+    padding-top: $fixed-menu-bar-height;
     
     @media screen and (min-width: 731px) {
       min-width: 425px;
@@ -116,10 +120,11 @@
       @media screen and (min-width: 731px) {
         display: flex;
         flex-flow: column nowrap;
+        height: 100%;
       }
       @media screen and (min-width: 1024px) {
         flex-flow: row nowrap;
-        height: 100%;
+        
       }
 
       li {
@@ -139,7 +144,7 @@
 
       li h2 {
         font-weight: $light-type;
-        font-size: 2.7rem;
+        font-size: 2.5rem;
       }
 
       li a {
@@ -152,6 +157,9 @@
         background-color: $pale;
         transition: background 0.2s ease-in-out;
 
+        @media screen and (min-width: 731px) {
+          padding: 2rem 1.5rem;
+        }
         @media screen and (min-width: 1024px) {
           background-color: transparent;
         }
